# Vitro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  vitro.cabal
app/: Main.hs
docs/: Grammar.bnf  Grammar.ebnf
src/: Ast.hs  Evaluator.hs  Parser.hs
